--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo" >
         <activity
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name"
@@ -39,6 +39,8 @@
             android:name="net.airvantage.eclo.MainActivity"
             android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
             android:theme="@style/Theme.FullScreen" >
+<!--            android:theme="@android:style/Theme.Holo.Light" > -->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
